# scriptorium

./: .gitignore  ACKNOWLEDGEMENTS.md  ACKNOWLEDGEMENTS.zh.md  CHANGELOG.md  README.md  README.zh.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture-and-acceptance.zh-CN.md  case-study.zh-CN.md
docs/showcase/: README.zh-CN.md  evidence-manifest.json
docs/showcase/evidence/: demo-report.json  windows-uat-summary.json
src/scriptorium/: __init__.py  __main__.py  cli.py  config.py  demo.py  doctor.py  host.py  init.py  inventory.py  migration.py  path_selection.py  pull.py  resume.py  status.py
src/scriptorium/assets/: __init__.py  compatibility.toml  library-kb.v1.1.json  lineage-graph.v1.json  parsed-paper.v1.json  reading-note.v1.json  review-draft.v1.json  review.v1.json  synthetic-project.md  workspace-readme.md
src/scriptorium/assets/skills/scriptorium-research/: SKILL.md
src/scriptorium/assets/skills/scriptorium-research/agents/: openai.yaml
tests/: _e2e_lectern_worker.py  e2e_install_lifecycle.py  e2e_pull.py  e2e_slides.py  test_cli_config.py  test_cli_init.py  test_cli_inventory.py  test_cli_migration.py  test_cli_pull.py  test_cli_status.py  test_config.py  test_demo.py  test_doctor.py  test_e2e_slides.py  test_host.py  test_init.py  test_install_lifecycle.py  test_inventory.py  test_migration.py  test_pull.py  test_resume.py  test_status.py
